--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
   "devDependencies": {
     "ssb-revisions": "^1.2.1",
     "tre-client": "^2.1.1",
-    "tre-editor-shell": "^1.3.0",
     "tre-file-importer": "^2.1.0",
     "tre-finder": "^2.3.0",
     "tre-prototypes": "^1.6.0",
@@ -62,7 +61,8 @@
     "mutant": "^3.22.1",
     "pull-stream": "^3.6.9",
     "tre-string": "^1.0.1",
-    "tre-stylesheets": "^1.1.0"
+    "tre-stylesheets": "^1.1.0",
+    "tre-editor-shell": "^1.3.0"
   },
   "repository": {
     "type": "git",
