--- a/package.json
+++ b/package.json
@@ -48,21 +48,21 @@
     }
   },
   "devDependencies": {
-    "ssb-revisions": "^1.2.1",
-    "tre-client": "^2.1.1",
-    "tre-file-importer": "^2.1.0",
-    "tre-finder": "^2.3.0",
-    "tre-prototypes": "^1.6.0",
+    "ssb-revisions": "^1.6.0",
+    "tre-client": "^4.1.0",
+    "tre-file-importer": "^3.3.1",
+    "tre-finder": "^2.8.2",
+    "tre-prototypes": "^1.9.0",
     "tre-split-pane": "^1.0.1"
   },
   "dependencies": {
     "brace": "^0.11.1",
     "module-styles": "^1.0.0",
-    "mutant": "^3.22.1",
-    "pull-stream": "^3.6.9",
+    "mutant": "^3.29.0",
+    "pull-stream": "^3.6.14",
+    "tre-editor-shell": "^1.6.1",
     "tre-string": "^1.0.1",
-    "tre-stylesheets": "^1.1.0",
-    "tre-editor-shell": "^1.3.0"
+    "tre-stylesheets": "^1.3.4"
   },
   "repository": {
     "type": "git",
